--- a/Practical Machine Learning - Prediction Project.Rmd
+++ b/Practical Machine Learning - Prediction Project.Rmd
@@ -2,7 +2,9 @@
 title: 'Practical Machine Learning:  Prediction'
 author: "N. Lakhani"
 date: "27 January 2018"
-output: html_document
+output:
+  html_document: default
+  pdf_document: default
 ---
 
 ### Executive Summary
@@ -40,7 +42,7 @@ Input data from url's provided. The training data is split (70:30) into training
  * Several variables have near zero values (NZV) & 'NA's. Variables with NZV's & NA's over 70% are dropped. Interestingly even with 70%, we find that all variables with any NA's are dropped. 
 
 
-```{r clean data,echo=FALSE,results='hide'}
+```{r clean data,echo=FALSE}
 
 set.seed(12345)
 testing <- read.csv('https://d396qusza40orc.cloudfront.net/predmachlearn/pml-testing.csv',na.strings=c('NA','#DIV/0!',''))
@@ -98,7 +100,7 @@ The cleaned training data set has:
 
 
 
-```{r validate clean data,echo=FALSE,results='hide'}
+```{r validate clean data,echo=FALSE}
 print(names(mytraining))
 print(names(myvalidation))
 dim(mytraining)
@@ -138,7 +140,7 @@ The first model we explore is Decision Trees. As can be seen visually from the p
 * the confusion matrix is highly populated across the matrix indicating many false postives/negatives; not a great model.  
  
 
-```{r rpart model,echo=FALSE,results='hide'}
+```{r rpart model,echo=FALSE}
 
 # define control parameters to be cross validation & create rpart model 
 mod_control <- trainControl(method='cv',number=3)
@@ -166,7 +168,7 @@ The random forest model shows a significant improvement over the rpart model. As
 
 
 
-```{r rf model,echo=FALSE,results='hide',warning=FALSE}
+```{r rf model,echo=FALSE,warning=FALSE}
 set.seed(12345)
 fit_rf <- train(classe ~ ., data=mytraining,method='rf',trControl=mod_control)
 fit_rf$finalModel
@@ -190,7 +192,7 @@ The gbm model shows:
 *As can be seen in the output below, both from the plot and confusion matrix (for classe values), the accuracy is 98%. Of the 53 predictors, only 12 have influence 
 
 
-```{r gbm model,echo=FALSE,results='hide',warning=FALSE}
+```{r gbm model,echo=FALSE,warning=FALSE}
 
 fit_gbm <- train(classe ~.,data=mytraining,method='gbm',trControl=mod_control,verbose=FALSE)
 fit_gbm$finalModel
