--- a/Practical Machine Learning - Prediction Project.Rmd
+++ b/Practical Machine Learning - Prediction Project.Rmd
@@ -18,7 +18,7 @@ In this project, my goal is to use data from accelerometers on the belt, forearm
 
 The libraries needed: caret, rpart, randomForest, reshape2, AppliedPredictiveModeling are loaded in workspace. 
 
-```{r setup, echo=FALSE, warning=FALSE}
+```{r setup, warning=FALSE,message=FALSE,echo=FALSE}
 
 library(caret)
 library(rpart)
@@ -40,7 +40,7 @@ Input data from url's provided. The training data is split (70:30) into training
  * Several variables have near zero values (NZV) & 'NA's. Variables with NZV's & NA's over 70% are dropped. Interestingly even with 70%, we find that all variables with any NA's are dropped. 
 
 
-```{r clean data,echo=FALSE}
+```{r clean data,echo=TRUE}
 
 set.seed(12345)
 testing <- read.csv('https://d396qusza40orc.cloudfront.net/predmachlearn/pml-testing.csv',na.strings=c('NA','#DIV/0!',''))
@@ -98,11 +98,10 @@ The cleaned training data set has:
 
 
 
-```{r validate clean data,echo=FALSE}
+```{r validate clean data,echo=TRUE}
 print(names(mytraining))
 print(names(myvalidation))
 dim(mytraining)
-dim(myvalidation)
 colSums(is.na(mytraining))
 unique(mytraining$classe)
 
@@ -138,7 +137,7 @@ The first model we explore is Decision Trees. As can be seen visually from the p
 * the confusion matrix is highly populated across the matrix indicating many false postives/negatives; not a great model.  
  
 
-```{r rpart model,echo=FALSE}
+```{r rpart model,echo=TRUE}
 
 # define control parameters to be cross validation & create rpart model 
 mod_control <- trainControl(method='cv',number=3)
@@ -166,7 +165,7 @@ The random forest model shows a significant improvement over the rpart model. As
 
 
 
-```{r rf model,echo=FALSE,warning=FALSE}
+```{r rf model,echo=TRUE,warning=FALSE}
 set.seed(12345)
 fit_rf <- train(classe ~ ., data=mytraining,method='rf',trControl=mod_control)
 fit_rf$finalModel
@@ -190,7 +189,7 @@ The gbm model shows:
 *As can be seen in the output below, both from the plot and confusion matrix (for classe values), the accuracy is 98%. Of the 53 predictors, only 12 have influence 
 
 
-```{r gbm model,echo=FALSE,warning=FALSE}
+```{r gbm model,echo=TRUE,warning=FALSE}
 
 fit_gbm <- train(classe ~.,data=mytraining,method='gbm',trControl=mod_control,verbose=FALSE)
 fit_gbm$finalModel
@@ -210,7 +209,7 @@ plot(cm_gbm$table, fill = cm_gbm$byClass,
 
 Based on the results, I have picked the **rf** model as the final model with accuracy of 0.996. The top 5 features in order of inluence are shown below along with the accuracy predictions for the test dataset 
 
-```{r final results,echo=FALSE}
+```{r final results,echo=TRUE}
 AccuracyResults <- data.frame(
   Model = c('CART', 'GBM', 'RF'),
   Accuracy = rbind(cm_tree$overall[1], cm_gbm$overall[1], cm_rf$overall[1])
@@ -221,7 +220,7 @@ print(AccuracyResults)
 
 ### 5. Prediction on test cases and output submission ####
 
-```{r final model evaluation,echo=FALSE}
+```{r final model evaluation,echo=TRUE}
 
 imp <- varImp(fit_rf)
 imp$importance$Overall <- sort(imp$importance$Overall, decreasing=TRUE)
